@@ -61,62 +61,4 @@ $data[1] = print_textarea ('tcp_rcv', 2, 65, $tcp_rcv, '', true);
 $table->colspan['tcp_receive'][1] = 3;
 
 push_table_row ($data, 'tcp_receive');
-
-return;
-?>
-
-<td class="datos2"><?php echo __('TCP port') ?></td>
-<td class="datos2">
-<input type="text" name="tcp_port" size="5" value="<?php echo $tcp_port ?>">
-</td></tr>
-<tr><td class="datos"><?php echo __('SNMP OID') ?><?php print_help_icon("snmpoid"); ?></td>
-<td class="datos">
-<input type="text" name="snmp_oid" size="25" value="<?php echo $snmp_oid ?>">
-</td>
-<td class="datos"><?php echo __('SNMP community') ?></td>
-<td class="datos">
-<input type="text" name="snmp_community" size="25" value="<?php echo $snmp_community ?>">
-</td></tr>
-<tr><td class="datos2t"><?php echo __('TCP send') ?></td>
-<td class="datos2">
-<textarea name="tcp_send" cols="20" rows="2"><?php echo $tcp_send ?></textarea>
-</td>
-<td class="datos2t"><?php echo __('TCP receive') ?></td>
-<td class="datos2">
-<textarea name="tcp_rcv" cols="20" rows="2"><?php echo $tcp_rcv ?></textarea>
-</td></tr>
-<tr><td class="datos"><?php echo __('Minimum Data') ?></td>
-<td class="datos">
-<input type="text" name="modulo_min" size="5" value="<?php echo $modulo_min ?>">
-</td>
-<td class="datos"><?php echo __('Maximum Data') ?></td>
-<td class="datos">
-<input type="text" name="modulo_max" size="5" value="<?php echo $modulo_max ?>">
-</td></tr>
-<?PHP
-
-echo '<tr><td class="datos2t">'.__('Comments');
-echo '<td class="datos2" colspan=3>';
-echo '<textarea name="descripcion" cols=70 rows=2>';
-echo $description;
-echo "</textarea>";
-echo "</td></tr>";
-echo "</table>";
-
-// Module type, hidden
-print_input_hidden ('id_modulo', $id_component_type);
-
-// Update/Add buttons
-echo '<div class="action-buttons" style="width: 95%">';
-if ($id) {
-	print_input_hidden ('update_component', 1);
-	print_input_hidden ('id', $id);
-	print_submit_button (__('Update'), 'crt', false, 'class="sub upd"');
-} else {
-	print_input_hidden ('create_component', 1);
-	print_submit_button (__('Create'), 'crt', false, 'class="sub next"');
-}
-echo '</div>';
-echo '</form>';
-
 ?>
